--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.7.20",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
