--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "sweetalert2": "^11.7.20",
-    "vue": "^3.2.13",
+    "swiper": "^10.1.0",
+    "vue": "^3.2.36",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5",
     "vuetify": "^3.0.0-beta.0",
