--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "pinia": "^2.1.6",
     "roboto-fontface": "*",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.1.0",
-    "vue": "^3.2.36",
+    "vue": "^3.3.0",
     "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5",
